--- a/index.css
+++ b/index.css
@@ -143,6 +143,7 @@
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	font-family:'Roboto Slab', serif ;
 }
 
 #contacts {
